Test Org - Speridian/src/objects/BA_Claim__c.object
<CustomObject>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ClaimStatus__c</fullName>
        <label>Claim Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_ExternalClaimNumber__c</fullName>
        <label>External Claim Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_HospitalId__c</fullName>
        <label>Hospital Id</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_HospitalName__c</fullName>
        <label>Hospital Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_LinkingClaim__c</fullName>
        <label>Linking Claim #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_MemberName__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Member Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Claims (Provider)</relationshipLabel>
        <relationshipName>Claims1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_ServiceStartDate__c</fullName>
        <label>Service Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Claims</label>
    <nameField>
        <displayFormat>CLM{0000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>